# metabodecon

./: .Rbuildignore  .Rprofile  .codecov.yml  .gitignore  .gitlab-ci.yml  .lintr  404.html  ARCHIVE.html  ARCHIVE.md  CONTRIBUTE.html  CONTRIBUTE.md  CRAN-SUBMISSION  Cargo.toml  DESCRIPTION  Dockerfile  LICENSE  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.md  README.md  TODOS.html  TODOS.md  _pkgdown.yml  authors.html  authors.md  check_package.R  codecov.yml  copilot-instructions.html  copilot-instructions.md  cran-comments.md  debug.R  index.html  index.md  llms.txt  pkgdown.yml  prompts.md  search.json  sitemap.xml  tmp.txt
.github/: copilot-instructions.md
R/: 00_classes.R  00_util.R  01_util.R  03_print.R  04_is.R  05_as.R  06_check_args.R  07_check_args.R  10_data.R  10_download_example_datasets.R  10_get_spectrum.R  10_spec.R  10_spectrum.R  11_datadir.R  20_decon.R  20_deconv.R  20_deconvolute.R  20_read_spectrum.R  20_spectrum.R  21_decon_helpers.R  21_deconvolute_helpers.R  21_get_user_input.R  21_helpers.R  21_read_spectrum.R  21_spectra.R  22_MetaboDecon1D.R  24_MetaboDecon1D.R  30_align.R  30_deconvolute.R  30_generate_lorentz_curves.R  30_generate_lorentz_curves_v10.R  30_generate_lorentz_curves_v11.R  30_generate_lorentz_curves_v12.R  30_generate_lorentz_curves_v13.R  31_deconvolute.R  31_fit_lorentz_curves.R  31_generate_lorentz_curves.R  31_get_user_input.R  31_glc_spectrum.R  32_find_peaks.R  (+126 more)
src/rust/: Cargo.toml  README.md
src/rust/src/: deconvolute_functions.rs  deconvoluter.rs  deconvolution.rs  lib.rs  lorentzian.rs  spectrum.rs
(+1248 files in other folders)
