[package]
name = "metabodecon-rust-backend"
version = "0.1.0"
authors = ["Maximilian Sombke <sombkemaximilian@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "_metabodecon"
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.7.1"
metabodecon = { path = "../../../metabodecon-rust/metabodecon", features = ["parallel", "bruker"], default-features = false }
